crates/musq/tests/trybuild/fail_upsert_empty_exclude.stderr
error: expected at least one column identifier after 'exclude:'
 --> tests/trybuild/fail_upsert_empty_exclude.rs:7:18
  |
7 |     let _query = sql!("INSERT INTO users (id, name) VALUES {insert: v} ON CONFLICT (id) DO UPDATE SET {upsert: v, exclude: }");
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sql` (in Nightly builds, run with -Z macro-backtrace for more info)
